tests/error_code_migration_new/error_code_migration_new.exp
Error ------------------------------------------------------------------------------------------------------ test.js:1:1

Cannot cast `1` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:1:1
   1| 1 as string; // not suppressed
      ^ [1]

References:
   test.js:1:6
   1| 1 as string; // not suppressed
           ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot cast `1` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:3:1
   3| 1 as string; // not suppressed
      ^ [1]

References:
   test.js:3:6
   3| 1 as string; // not suppressed
           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:8:14

Cannot call `expectString` with `1` bound to `v` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:8:14
   8| expectString(1); // not suppressed
                   ^ [1]

References:
   test.js:7:34
   7| declare function expectString(v: string): void;
                                       ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:10:14

Cannot call `expectString` with `1` bound to `v` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:10:14
   10| expectString(1); // not suppressed
                    ^ [1]

References:
   test.js:7:34
    7| declare function expectString(v: string): void;
                                        ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:14:41

Cannot return `1` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:14:41
   14| function testReturn1(): string { return 1 } // not suppressed
                                               ^ [1]

References:
   test.js:14:25
   14| function testReturn1(): string { return 1 } // not suppressed
                               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:16:41

Cannot return `1` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:16:41
   16| function testReturn2(): string { return 1 } // not suppressed
                                               ^ [1]

References:
   test.js:16:25
   16| function testReturn2(): string { return 1 } // not suppressed
                               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:20:36

Cannot assign object literal to `_testProp1` because property `prop` is missing in object literal [1] but exists in
object type [2]. [incompatible-type]

   test.js:20:36
   20| const _testProp1: {prop: string} = {}; // not suppressed
                                          ^^ [1]

References:
   test.js:20:19
   20| const _testProp1: {prop: string} = {}; // not suppressed
                         ^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:22:36

Cannot assign object literal to `_testProp2` because property `prop` is missing in object literal [1] but exists in
object type [2]. [incompatible-type]

   test.js:22:36
   22| const _testProp2: {prop: string} = {}; // not suppressed
                                          ^^ [1]

References:
   test.js:22:19
   22| const _testProp2: {prop: string} = {}; // not suppressed
                         ^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:27:24

Cannot instantiate `ExpectString` because number literal `1` [1] is incompatible with string [2] in type argument `T`.
[incompatible-type]

   test.js:27:24
   27| type T1 = ExpectString<1>; // not suppressed
                              ^ [1]

References:
   test.js:26:37
   26| declare opaque type ExpectString<T: string>;
                                           ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:29:24

Cannot instantiate `ExpectString` because number literal `1` [1] is incompatible with string [2] in type argument `T`.
[incompatible-type]

   test.js:29:24
   29| type T2 = ExpectString<1>; // not suppressed
                              ^ [1]

References:
   test.js:26:37
   26| declare opaque type ExpectString<T: string>;
                                           ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:34:39

Cannot extend `Base` [1] with `TestExtend1` because number literal `1` [2] is incompatible with string [3] in property
`foo`. [incompatible-type]

   test.js:34:39
   34| class TestExtend1 extends Base { foo: 1 } // not suppressed
                                             ^ [2]

References:
   test.js:34:27
   34| class TestExtend1 extends Base { foo: 1 } // not suppressed
                                 ^^^^ [1]
   test.js:33:27
   33| declare class Base { foo: string }
                                 ^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:36:39

Cannot extend `Base` [1] with `TestExtend2` because number literal `1` [2] is incompatible with string [3] in property
`foo`. [incompatible-type]

   test.js:36:39
   36| class TestExtend2 extends Base { foo: 1 } // not suppressed
                                             ^ [2]

References:
   test.js:36:27
   36| class TestExtend2 extends Base { foo: 1 } // not suppressed
                                 ^^^^ [1]
   test.js:33:27
   33| declare class Base { foo: string }
                                 ^^^^^^ [3]



Found 12 errors
